# Skill-Anything

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.2.md  index.html  pyproject.toml  requirements.txt
assets/: demo.html  gen_demo_gif.py  gen_v02_demo_gif.py
scripts/: generate_demo_gif.py
skill_anything/: __init__.py  cli.py  engine.py  linting.py  llm.py  models.py
skill_anything/exporters/: __init__.py  skill_exporter.py
skill_anything/generators/: __init__.py  flashcard_gen.py  knowledge_gen.py  practice_gen.py  quiz_gen.py  visual_gen.py
skill_anything/interactive/: __init__.py  quiz_runner.py  review_runner.py
skill_anything/parsers/: __init__.py  audio_parser.py  base.py  pdf_parser.py  repo_parser.py  skill_parser.py  text_parser.py  video_parser.py  web_parser.py
tests/: conftest.py  test_engine.py  test_exporters.py  test_generators.py  test_models.py  test_parsers.py  test_v02_features.py
